cabal-version:   3.0
name:            ros2-haskell-tools
version:         0.1.0.0
license:         GPL-2.0-only
author:          Yuri Guimaraes
maintainer:      yuri.kgpps@gmail.com
build-type:      Simple

common warnings
    ghc-options: -Wall

library ros2
    exposed-modules: Ros2.PackageParser
    build-depends: base, parsec, text
    hs-source-dirs: src

executable depcheck
    import:           warnings
    main-is:          DepCheck.hs
    build-depends:    base, parsec, text, pretty-simple, cmdargs
    other-modules:    Ros2.PackageParser
    hs-source-dirs:   src
    default-language: Haskell2010
