cabal-version:   3.0
name:            ros2-haskell-tools
version:         0.1.0.0
license:         GPL-2.0-only
author:          Yuri Guimaraes
maintainer:      yuri.kgpps@gmail.com
build-type:      Simple

common warnings
    ghc-options: -Wall

library ros2
    exposed-modules: Ros2.PackageParser,
                     Ros2.IndexParser,
                     Ros2.Graph,
                     Ros2.RosdepFetch,
                     Ros2.PrettyError
    build-depends: base,
                   megaparsec,
                   text,
                   containers,
                   http-client,
                   http-conduit,
                   bytestring
    hs-source-dirs: src
    default-language: Haskell2010

-- executable parser
--     import:           warnings
--     main-is:          Parser.hs
--     build-depends:    base,
--                       megaparsec,
--                       text,
--                       pretty-simple,
--                       cmdargs
--     other-modules:    Ros2.PackageParser
--     hs-source-dirs:   src
--     default-language: Haskell2010
--
-- executable depcheck
--     import:           warnings
--     main-is:          DepCheck.hs
--     build-depends:    base,
--                       megaparsec,
--                       text,
--                       pretty-simple,
--                       cmdargs,
--                       containers,
--                       directory,
--                       dir-traverse,
--                       http-client,
--                       http-conduit,
--                       bytestring
--     other-modules:    Ros2.PackageParser,
--                       Ros2.IndexParser,
--                       Ros2.Graph
--     hs-source-dirs:   src
--     default-language: Haskell2010

executable rostool
    import:           warnings
    main-is:          Main.hs
    build-depends:    base,
                      megaparsec,
                      text,
                      pretty-simple,
                      cmdargs,
                      containers,
                      directory,
                      dir-traverse,
                      http-client,
                      http-conduit,
                      bytestring
    other-modules:    Ros2.PackageParser,
                      Ros2.IndexParser,
                      Ros2.PrettyError,
                      Ros2.Graph,
                      DepCheck,
                      Parser
    hs-source-dirs:   src
    default-language: Haskell2010
